--- a/blog/templates/user_posts.html
+++ b/blog/templates/user_posts.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+
+<h1 class="mb-3">Post by {{ user.username }} ({{ posts.total }})</h1>
    {% for post in posts.items %}
          <article class="media content-section">
             <img src="{{ post.author.image_file }}" alt="" class="rounded-circle article-img">
@@ -13,15 +15,16 @@
           </div>
         </article>
    {% endfor %}
-   {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
+  {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
         {% if page_num %}
             {% if posts.page == page_num %}
-                <a class="btn btn-info mb-4" href="{{ url_for('main.home', page=page_num) }}">{{ page_num }}</a>
+                <a class="btn btn-info mb-4" href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
             {% else %}
-            <a class="btn btn-outline-info mb-4" href="{{ url_for('main.home', page=page_num) }}">{{ page_num }}</a>
+            <a class="btn btn-outline-info mb-4" href="{{ url_for('users.user_posts', username=user.username, page=page_num) }}">{{ page_num }}</a>
             {% endif%}
         {% else %}
             ...
         {% endif %}
    {% endfor %}
-{% endblock content %}
+{% endblock content %} 
+
