--- a/blog/templates/posts/create_post.html
+++ b/blog/templates/posts/create_post.html
@@ -1,3 +1,5 @@
+{% from "helpers/form_helper.html" import displayField %}
+
 {% extends "base.html" %}
 {% block content %}
     
@@ -5,7 +7,8 @@
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">{{ legend }}</legend>
-                 <div class="form-group">
+                {{ displayField(form.category) }}
+                 <!-- <div class="form-group">
                     {{ form.category.label(class="form-control-label") }}
                     {% if form.category.errors %}
                         {{ form.category(class="form-control form-control-lg is-invalid") }}
@@ -17,8 +20,9 @@
                     {% else %}
                         {{ form.category(class="form-control form-control-lg") }}
                     {% endif %}
-                </div>
-                <div class="form-group">
+                </div> -->
+                {{ displayField(form.title) }}
+                <!-- <div class="form-group">
                     {{ form.title.label(class="form-control-label") }}
                     {% if form.title.errors %}
                         {{ form.title(class="form-control form-control-lg is-invalid") }}
@@ -30,8 +34,9 @@
                     {% else %}
                         {{ form.title(class="form-control form-control-lg") }}
                     {% endif %}
-                </div>
-                <div class="form-group">
+                </div> -->
+                {{ displayField(form.content) }}
+                <!-- <div class="form-group">
                     {{ form.content.label(class="form-control-label") }}
                     {% if form.content.errors %}
                         {{ form.content(class="form-control form-control-lg is-invalid") }}
@@ -43,10 +48,11 @@
                     {% else %}
                         {{ form.content(class="form-control form-control-lg") }}
                     {% endif %}
-                </div>
+                </div> -->
             </fieldset>
-            <div class="form-group mt-2">
+            {% include "helpers/_submit.html" %}
+            <!-- <div class="form-group mt-2">
                 {{ form.submit(class="btn btn-outline-info") }}
-            </div>
+            </div> -->
         </form>
 {% endblock content %}
