--- a/blog/templates/users/account.html
+++ b/blog/templates/users/account.html
@@ -1,3 +1,5 @@
+{% from "helpers/form_helper.html" import displayField %}
+
 {% extends "base.html" %}
 {% block content %}
 
@@ -13,7 +15,8 @@
         {{ form.hidden_tag() }}
         <fieldset class="form-group">
             <legend class="border-bottom mb-4">Account Info</legend>
-            <div class="form-group">
+             {{ displayField(form.username) }}
+            <!-- <div class="form-group">
                 {{ form.username.label(class="form-control-label") }}
 
                 {% if form.username.errors %}
@@ -26,8 +29,9 @@
                 {% else %}
                 {{ form.username(class="form-control form-control-lg") }}
                 {% endif %}
-            </div>
-            <div class="form-group">
+            </div> -->
+            {{ displayField(form.email) }}
+            <!-- <div class="form-group">
                 {{ form.email.label(class="form-control-label") }}
                 {% if form.email.errors %}
                 {{ form.email(class="form-control form-control-lg is-invalid") }}
@@ -39,7 +43,7 @@
                 {% else %}
                 {{ form.email(class="form-control form-control-lg") }}
                 {% endif %}
-            </div>
+            </div> -->
             <div class="form-group mt-2">
                 {{ form.picture.label() }}
                 {{ form.picture(class="form-control-file mt-2") }}
@@ -50,9 +54,10 @@
                     {% endif %}
             </div>
         </fieldset>
-        <div class="form-group mt-4">
+        {% include "helpers/_submit.html" %}
+        <!-- <div class="form-group mt-4">
             {{ form.submit(class="btn btn-outline-info") }}
-        </div>
+        </div> -->
     </form>
 
 {% endblock content %}
