--- a/blog/templates/users/login.html
+++ b/blog/templates/users/login.html
@@ -1,3 +1,5 @@
+{% from "helpers/form_helper.html" import displayField %}
+
 {% extends "base.html" %}
 {% block content %}
     <div class="content-section">
@@ -5,7 +7,8 @@
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Log In</legend>
-                <div class="form-group">
+                {{ displayField(form.email) }}
+                <!-- <div class="form-group">
                     {{ form.email.label(class="form-control-label") }}
                     {% if form.email.errors %}
                         {{ form.email(class="form-control form-control-lg is-invalid") }}
@@ -17,8 +20,9 @@
                     {% else %}
                         {{ form.email(class="form-control form-control-lg") }}
                     {% endif %}
-                </div>
-                <div class="form-group">
+                </div> -->
+                {{ displayField(form.password) }}
+                <!-- <div class="form-group">
                     {{ form.password.label(class="form-control-label") }}
                     {% if form.password.errors %}
                         {{ form.password(class="form-control form-control-lg is-invalid") }}
@@ -30,15 +34,16 @@
                     {% else %}
                         {{ form.password(class="form-control form-control-lg") }}
                     {% endif %}
-                </div>
+                </div> -->
                 <div class="form-check">
                     {{ form.remember(class="form-check-input") }}
                     {{ form.remember.label(class="form-check-label") }}
                 </div>
             </fieldset>
-            <div class="form-group mt-2">
+            {% include "helpers/_submit.html" %}
+            <!-- <div class="form-group mt-2">
                 {{ form.submit(class="btn btn-outline-info") }}
-            </div>
+            </div> -->
             <small class="text-muted ml-2">
                 <a href="#">Forgot Password?</a>
             </small>
