--- a/blog/templates/users/register.html
+++ b/blog/templates/users/register.html
@@ -1,3 +1,5 @@
+{% from "helpers/form_helper.html" import displayField %}
+
 {% extends "base.html" %}
 {% block content %}
     <div class="content-section">
@@ -5,7 +7,8 @@
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Join Today</legend>
-                <div class="form-group">
+                {{ displayField(form.username) }}
+                <!-- <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
 
                     {% if form.username.errors %}
@@ -18,8 +21,9 @@
                     {% else %}
                         {{ form.username(class="form-control form-control-lg") }}
                     {% endif %}
-                </div>
-                <div class="form-group">
+                </div> -->
+                {{ displayField(form.email) }}
+                <!-- <div class="form-group">
                     {{ form.email.label(class="form-control-label") }}
                     {% if form.email.errors %}
                         {{ form.email(class="form-control form-control-lg is-invalid") }}
@@ -31,8 +35,9 @@
                     {% else %}
                         {{ form.email(class="form-control form-control-lg") }}
                     {% endif %}
-                </div>
-                <div class="form-group">
+                </div> -->
+                {{ displayField(form.password) }}
+                <!-- <div class="form-group">
                     {{ form.password.label(class="form-control-label") }}
                     {% if form.password.errors %}
                         {{ form.password(class="form-control form-control-lg is-invalid") }}
@@ -44,8 +49,9 @@
                     {% else %}
                         {{ form.password(class="form-control form-control-lg") }}
                     {% endif %}
-                </div>
-                <div class="form-group">
+                </div> -->
+                {{ displayField(form.confirm_password) }}
+                <!-- <div class="form-group">
                     {{ form.confirm_password.label(class="form-control-label") }}
                     {% if form.confirm_password.errors %}
                         {{ form.confirm_password(class="form-control form-control-lg is-invalid") }}
@@ -57,11 +63,12 @@
                     {% else %}
                         {{ form.confirm_password(class="form-control form-control-lg") }}
                     {% endif %}
-                </div>
+                </div> -->
             </fieldset>
-            <div class="form-group mt-2">
+            {% include "helpers/_submit.html" %}
+            <!-- <div class="form-group mt-2">
                 {{ form.submit(class="btn btn-outline-info") }}
-            </div>
+            </div> -->
         </form>
     </div>
     <div class="border-top pt-3">
